updated ApiGateway in template

--- a/apigw-terminal-app-package.yaml
+++ b/apigw-terminal-app-package.yaml
@@ -178,7 +178,7 @@ Resources:
       - AttributeName: UserId
         KeyType: HASH
       BillingMode: PAY_PER_REQUEST
-  ApiGateway:
+  APIGateway:
     DependsOn:
     - WebsiteBucket
     - LexLambda
@@ -193,52 +193,72 @@ Resources:
       Mode: overwrite
       BinaryMediaTypes:
       - '*~1*'
-      Body:
-        info:
-          title: Terminal APP
-          version: '1.0'
-        paths:
-          /:
-            get:
-              responses:
-                '200':
-                  description: OK
-                  headers:
-                    Content-Length:
-                      type: string
-                    Content-Type:
-                      type: string
-              x-amazon-apigateway-integration:
-                type: AWS
-                integrationHttpMethod: GET
-                passthroughBehavior: when_no_match
-                credentials:
-                  Fn::Sub: arn:aws:iam::${AWS::AccountId}:role/iam-apigw-terminal-app-${Stage}
-                uri:
-                  Fn::Sub: arn:aws:apigateway:${AWS::Region}:s3:path/${BucketName}/${BucketKey}
-                responses:
-                  default:
-                    statusCode: '200'
-                    responseParameters:
-                      method.response.header.Content-Type: integration.response.header.Content-Type
-                      method.response.header.Content-Length: integration.response.header.Content-Length
-          /lex:
-            post:
-              responses:
-                '200':
-                  description: OK
-              x-amazon-apigateway-integration:
-                integrationHttpMethod: POST
-                type: AWS_PROXY
-                uri:
-                  Fn::Sub: arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${LexLambda.Arn}/invocations
-                credentials:
-                  Fn::Sub: arn:aws:iam::${AWS::AccountId}:role/iam-apigw-terminal-app-${Stage}
+  RootResource:
+    Type: AWS::ApiGateway::Resource
+    Properties:
+      ParentId:
+        Fn::GetAtt:
+        - APIGateway
+        - RootResourceId
+      PathPart: root
+      RestApiId:
+        Ref: APIGateway
+  RootMethod:
+    DependsOn:
+    - WebsiteBucket
+    Type: AWS::ApiGateway::Method
+    Properties:
+      AuthorizationType: NONE
+      HttpMethod: GET
+      Integration:
+        IntegrationHttpMethod: GET
+        Type: AWS_PROXY
+        Uri:
+          Fn::Sub: arn:aws:apigateway:${AWS::Region}:s3:path/${BucketName}/${BucketKey}
+        Credentials:
+          Fn::Sub: arn:aws:iam::${AWS::AccountId}:role/iam-apigw-terminal-app-${Stage}
+      ResourceId:
+        Ref: RootResource
+      RestApiId:
+        Ref: APIGateway
+      RequestParameters:
+        integration.request.header.Content-Type: "'application/octet-steam'"
+  LexResource:
+    Type: AWS::ApiGateway::Resource
+    Properties:
+      ParentId:
+        Fn::GetAtt:
+        - APIGateway
+        - RootResourceId
+      PathPart: lex
+      RestApiId:
+        Ref: APIGateway
+  LexMethod:
+    DependsOn:
+    - LexLambda
+    Type: AWS::ApiGateway::Method
+    Properties:
+      AuthorizationType: NONE
+      HttpMethod: POST
+      Integration:
+        IntegrationHttpMethod: POST
+        Type: AWS_PROXY
+        Uri:
+          Fn::Sub: arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${LexLambda.Arn}/invocations
+        Credentials:
+          Fn::Sub: arn:aws:iam::${AWS::AccountId}:role/iam-apigw-terminal-app-${Stage}
+      ResourceId:
+        Ref: LexResource
+      RestApiId:
+        Ref: APIGateway
   ApiGatewayDeployment:
+    DependsOn:
+    - RootMethod
+    - LexMethod
     Type: AWS::ApiGateway::Deployment
     Properties:
       RestApiId:
-        Ref: ApiGateway
+        Ref: APIGateway
       StageName:
         Ref: ApiGatewayStageName
   ApiGatewayStage:
@@ -247,7 +267,7 @@ Resources:
       DeploymentId:
         Ref: ApiGatewayDeployment
       RestApiId:
-        Ref: ApiGateway
+        Ref: APIGateway
       StageName:
         Ref: ApiGatewayStageName
   LexLambdaPermissions:
@@ -260,7 +280,7 @@ Resources:
         - LexLambda
         - Arn
       SourceArn:
-        Fn::Sub: arn:aws:execute-api:${AWS::Region}:${AWS::AccountId}:${ApiGateway}/${ApiGatewayStageName}/GET/lex
+        Fn::Sub: arn:aws:execute-api:${AWS::Region}:${AWS::AccountId}:${APIGateway}/${ApiGatewayStageName}/GET/lex
 Outputs:
   WebsiteURL:
     Value:
