--- a/apigw-terminal-app.template.yaml
+++ b/apigw-terminal-app.template.yaml
@@ -228,43 +228,6 @@ Resources:
       Mode: overwrite
       BinaryMediaTypes:
        - "*~1*"
-      #Body:
-      #  info:
-      #    title: Terminal APP
-      #    version: '1.0'
-      #  paths:
-      #    "/":
-      #      get:
-      #        responses:
-      #          "200":
-      #            description: OK
-      #            headers:
-      #              Content-Length:
-      #                type: string
-      #              Content-Type:
-      #                type: string
-      #        x-amazon-apigateway-integration:
-      #          type: AWS
-      #          integrationHttpMethod: GET
-      #          passthroughBehavior: "when_no_match"
-      #          credentials: !Sub "arn:aws:iam::${AWS::AccountId}:role/iam-apigw-terminal-app-${Stage}"
-      #          uri: !Sub "arn:aws:apigateway:${AWS::Region}:s3:path/${BucketName}/${BucketKey}"
-      #          responses:
-      #            default:
-      #              statusCode: "200"
-      #              responseParameters:
-      #                method.response.header.Content-Type: "integration.response.header.Content-Type"
-      #                method.response.header.Content-Length: "integration.response.header.Content-Length"
-      #    "/lex":
-      #      post:
-      #        responses:
-      #          "200":
-      #            description: OK
-      #        x-amazon-apigateway-integration:
-      #          integrationHttpMethod: POST
-      #          type: AWS_PROXY
-      #          uri: !Sub "arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${LexLambda.Arn}/invocations"
-      #          credentials: !Sub "arn:aws:iam::${AWS::AccountId}:role/iam-apigw-terminal-app-${Stage}"
 
   RootResource:
     Type: AWS::ApiGateway::Resource
@@ -277,6 +240,7 @@ Resources:
 
   RootMethod:
     DependsOn:
+      - RootResource
       - WebsiteBucket
     Type: AWS::ApiGateway::Method
     Properties:
@@ -284,13 +248,12 @@ Resources:
       HttpMethod: GET
       Integration:
         IntegrationHttpMethod: GET
-        Type: AWS_PROXY
-        Uri:  !Sub "arn:aws:apigateway:${AWS::Region}:s3:path/${BucketName}/${BucketKey}"
+        Type: HTTP_PROXY
+        Uri: !Sub "https://s3-${AWS::Region}.amazonaws.com/${BucketName}/${BucketKey}"
+        #Uri:  !Sub "arn:aws:apigateway:${AWS::Region}:s3:path/${BucketName}/${BucketKey}"
         Credentials: !Sub "arn:aws:iam::${AWS::AccountId}:role/iam-apigw-terminal-app-${Stage}"
       ResourceId: !Ref RootResource
       RestApiId: !Ref APIGateway
-      RequestParameters:
-        integration.request.header.Content-Type: "'application/octet-steam'"
 
   LexResource:
     Type: AWS::ApiGateway::Resource
@@ -303,6 +266,7 @@ Resources:
 
   LexMethod:
     DependsOn:
+      - LexResource
       - LexLambda
     Type: AWS::ApiGateway::Method
     Properties:
@@ -324,7 +288,7 @@ Resources:
     Type: AWS::ApiGateway::Deployment
     Properties:
       RestApiId: !Ref APIGateway
-      StageName: !Ref ApiGatewayStageName
+      #StageName: !Ref ApiGatewayStageName
 
   ApiGatewayStage:
     Type: AWS::ApiGateway::Stage
